заменить pom.xml, добавить файлы